--- a/styles/header_footer_styles.css
+++ b/styles/header_footer_styles.css
@@ -56,7 +56,7 @@
 
 .page-header__column--menu-active {
   position: relative;
-  border-bottom: 3px solid #018f3c;
+  /* border-bottom: 3px solid #018f3c; */
 }
 
 .page-header__column--menu-active span {
@@ -199,7 +199,7 @@
 /* ---------------  --------------- Footer ---------------  --------------- */
 
 .page-footer {
-  min-height: 245px;
+  /* min-height: 245px; */
   background-color: #f2ede7;
   clear: both;
 }
