--- a/styles/header_footer_styles.css
+++ b/styles/header_footer_styles.css
@@ -11,7 +11,7 @@
 }
 
 .page-header__column--logo {
-  margin-right: 25px;
+  margin-right: 53px;
 }
 
 .page-header__column--logo a {
@@ -31,7 +31,7 @@
 .page-header__column--menu {
   position: relative;
   /* margin-right: 27px; */
-  margin-right: 9px;
+  margin-right: 53px;
 }
 
 .page-header__column--menu-link,
@@ -40,11 +40,12 @@
 }
 
 .page-header__column--menu-link a {
+  position: relative;
   display: block;
   height: 120px;
-  padding-top: 57px;
-  padding-left: 12px;
-  padding-right: 12px;
+  padding-top: 55px;
+  padding-left: 10px;
+  padding-right: 10px;
   font-size: 16px;
   text-decoration: none;
   color: #000000;
@@ -53,6 +54,16 @@
 .page-header__column--menu-link a:hover {
   color: #018f3c;
 }
+
+.page-header__column--menu-link a:hover::after {
+  position: absolute;
+  top: 99px; 
+  left: 50%;
+  content: '';
+  margin-left: -10px;  
+  border: 8px solid transparent;
+  border-bottom-color: #018f3c;
+}  
 
 .page-header__column--menu-active {
   position: relative;
@@ -173,20 +184,37 @@
   background-position: -210px -221px;
 }
 
+.header-icon--login:hover {
+  background-position: -264px -27px;
+}
+
 .header-icon--registration {
+  position: absolute;
+  top: -3px;
+  left: -3px;
+  display: block;
+  width: 220px;
+  height: 46px;
   font-size: 13px;
   font-weight: 600;
-  line-height: 42px;
+  line-height: 38px;
   text-transform: uppercase;
   text-decoration: none;
-  padding-left: 25px;
+  padding-right: 5px;
+  padding-left: 32px;
+  padding-top: 3px;
+  color: #000000;
+  border-radius: 30px;
+}
+
+.header-icon--registration:hover {
   color: #000000;
 }
 
 .header-icon--registration::before {
   position: absolute;
-  left: 24px;
-  top: 9px;
+  left: 27px;
+  top: 12px;
   content: '';
   /* display: block; */
   width: 26px;
