Внесены правки в стили для экранов менее 360px

--- a/styles/registration_seller.css
+++ b/styles/registration_seller.css
@@ -648,3 +648,11 @@ input[type="checkbox"]:checked:active+label:before {
   }
 
 }  
+
+@media screen and (max-width: 360px) {
+  
+  .container {
+    max-width: 320px;
+  }
+
+}
