Внесены правки в стили header

--- a/styles/registration_seller.css
+++ b/styles/registration_seller.css
@@ -644,7 +644,11 @@ input[type="checkbox"]:checked:active+label:before {
   }
 
   .b-wizard {
-    padding-bottom: 90px;
+    padding-bottom: 50px;
+  }
+
+  .register-user {
+    margin-top: 0;
   }
 
 }  
