--- a/styles/registration_seller.css
+++ b/styles/registration_seller.css
@@ -591,20 +591,20 @@ input[type="checkbox"]:checked:active+label:before {
     left: 45px;
   }
 
-  label[for="type_seller_person"],
+  /* label[for="type_seller_person"],
   label[for="type_seller_company"] {
     position: relative;
   }
-
+  
   input[type="radio"]+label[for="type_seller_person"]:before {
     top: 13px;
     left: 45px;
   }
-
+  
   input[type="radio"]+label[for="type_seller_company"]:before {
     top: 33px;
     left: 45px;
-  }
+  } */
 
   .showLink {
     padding-left: 8px;
