--- a/styles/registration_seller.css
+++ b/styles/registration_seller.css
@@ -103,7 +103,7 @@ input[type="radio"]:checked:active+label:before {
     background-position: -72px 0
 } */
 
-input[type="radio"]:checked+label:after {
+input[type="radio"]:checked+label::after {
   background-color: #02903d;
 }
 
@@ -412,15 +412,15 @@ input[type='radio']+label.block-label {
 .iagree-label {
 }
 
-input[type='checkbox']+label.block-label:before, 
-input[type='radio']+label.block-label:before {
+input[type='checkbox']+label.block-label::before, 
+input[type='radio']+label.block-label::before {
   float: left;
   margin-right: -100%;
   position: relative;
   left: -30px;
 }
 
-input[type="checkbox"]+label:before {
+input[type="checkbox"]+label::before {
   content: "";
   /* display: inline-block; */
   vertical-align: middle;
@@ -433,19 +433,19 @@ input[type="checkbox"]+label:before {
   background-position: 0 0;
 }
 
-input[type="checkbox"]:hover+label:before {
+input[type="checkbox"]:hover+label::before {
     background-position: -27px 0
 }
 
-input[type="checkbox"]:active+label:before {
+input[type="checkbox"]:active+label::before {
     background-position: -54px 0
 }
 
-input[type="checkbox"]:checked+label:before {
+input[type="checkbox"]:checked+label::before {
     background-position: -81px 0
 }
 
-input[type="checkbox"]:checked:active+label:before {
+input[type="checkbox"]:checked:active+label::before {
     background-position: -54px 0
 }
 
