--- a/styles/registration_seller.css
+++ b/styles/registration_seller.css
@@ -171,7 +171,7 @@ input[type="radio"]+label[for="type_seller_company"]::after {
   z-index: 1;
 }
 
-/* input[type="radio"]+label[for="type_seller_person"]::after {
+#type_seller_person+label[for="type_seller_company"]::after {
   content: "";
   display: inline-block;
   vertical-align: middle;
@@ -185,7 +185,7 @@ input[type="radio"]+label[for="type_seller_company"]::after {
   top: 20px;
   left: 119px;
   z-index: 1;
-} */
+}
 
 /* Стили из файла tiles-box.css */
 .tilesBox .person {
