--- a/styles/registration_seller.css
+++ b/styles/registration_seller.css
@@ -155,7 +155,7 @@ left: 109px;
 z-index: 1;
 } */
 
-input[type="radio"]+label[for="type_seller_company"]::after {
+/* input[type="radio"]+label[for="type_seller_company"]::after {
   content: "";
   display: inline-block;
   vertical-align: middle;
@@ -169,7 +169,7 @@ input[type="radio"]+label[for="type_seller_company"]::after {
   top: 20px;
   left: 119px;
   z-index: 1;
-}
+} */
 
 #type_seller_person+label[for="type_seller_company"]::after {
   content: "";
