Внесены правки в стили

--- a/styles/registration_seller.css
+++ b/styles/registration_seller.css
@@ -171,7 +171,11 @@ z-index: 1;
   z-index: 1;
 } */
 
-#type_seller_person+label::after {
+label[for="type_seller_person"] {
+  display: block;
+}
+
+#type_seller_person+label[for="type_seller_person"]::after {
   content: "";
   display: inline-block;
   vertical-align: middle;
