Внесены правки в стили

--- a/styles/registration_seller.css
+++ b/styles/registration_seller.css
@@ -109,6 +109,7 @@ input[type="radio"]:checked+label::after {
 
 input[type="radio"]+label {
   position: relative;
+  display: block;
 }
 
 input[type="radio"]+label::before {
@@ -131,65 +132,26 @@ input[type="radio"]+label::before {
   z-index: 1;
 }
 
-/* input[type="radio"]+label::after {
+input[type="radio"]+label::after {
   content: "";
   display: inline-block;
   vertical-align: middle;
   height: 18px;
   width: 18px;
-  margin: -4px 6px 0 0; */
-
-
+  margin: -4px 6px 0 0; 
   /* background-image: url("../../../images/ui/pokupo-ui-radio.png"); */
   /* background-image: url("../images/ui/pokupo-ui-radio.png");
   background-repeat: no-repeat;
   background-position: 0 0; */
-
-
-/*   border-radius: 50%;
-background-color: #ffffff;
-
-position: absolute;
-top: 220px;
-left: 109px;
-z-index: 1;
-} */
-
-/* input[type="radio"]+label[for="type_seller_company"]::after {
-  content: "";
-  display: inline-block;
-  vertical-align: middle;
-  height: 18px;
-  width: 18px;
-  margin: -4px 6px 0 0;
   border-radius: 50%;
-  background-color: yellow;
+  background-color: #ffffff;
 
   position: absolute;
-  top: 20px;
-  left: 119px;
+  top: 220px;
+  left: 109px;
   z-index: 1;
-} */
+} 
 
-label[for="type_seller_person"] {
-  display: block;
-}
-
-#type_seller_person+label[for="type_seller_person"]::after {
-  content: "";
-  display: inline-block;
-  vertical-align: middle;
-  height: 18px;
-  width: 18px;
-  margin: -4px 6px 0 0;
-  border-radius: 50%;
-  background-color: red;
-
-  position: absolute;
-  top: 20px;
-  left: 119px;
-  z-index: 1;
-}
 
 /* Стили из файла tiles-box.css */
 .tilesBox .person {
